Shined up examples. Added vertex degree

--- a/docs/css/freelancer.css
+++ b/docs/css/freelancer.css
@@ -172,6 +172,7 @@ section#examples{
 #examples .example-item {
   right: 0;
   margin: 0 0 10px;
+  cursor: pointer;
 }
 #examples .example-item .example-link {
   display: block;
