--- a/docs/css/flare.css
+++ b/docs/css/flare.css
@@ -1,6 +1,5 @@
 
 path.arc {
-    cursor: move;
     fill: #fff;
 }
 
@@ -30,7 +29,7 @@ path.arc {
     fill: none;
     stroke: #000;
     stroke-opacity: .1;
-    pointer-events: none;
+    /*pointer-events: none;*/
 }
 
 .link.source, .link.target {
