--- a/docs/css/fingerprintpanel.css
+++ b/docs/css/fingerprintpanel.css
@@ -3,7 +3,6 @@
     width: 100%;
     height: auto;
     margin: 0 auto;
-    margin-top: 40px;
     margin-bottom: 80px;
 }
 
@@ -11,7 +10,7 @@
 .fpPanel { 
     border-collapse:collapse;
     width: 50%;
-    height: 30px;
+    /*height: 30px;*/
     margin: 0 auto;
 }
 
@@ -19,7 +18,7 @@
 .fpPanel th {
   position: relative;
   padding: 10px; 
-  height:150px;
+  height: 150px;
 }
 
 .fpPanel th span {
