--- a/docs/css/fingerprintpanel.css
+++ b/docs/css/fingerprintpanel.css
@@ -44,12 +44,12 @@
     font-family:sans-serif; font-size:13px;
 }
 .fpPanel td.include {
-    background-color:black;
+    background-color:#28881e;
     font-weight:bold; 
     color:white;
 }
 .fpPanel td.exclude {
-    background-color:#545454;
+    background-color:#863333;
     font-weight:bold; 
     color:#696969;
 }
