Extensions to fingerprinting

--- a/docs/css/fingerprintpanel.css
+++ b/docs/css/fingerprintpanel.css
@@ -1,8 +1,9 @@
+/*Fingerprint selection query menu*/
 
 .fpPanelOuter {
-    overflow-x:auto;
-    width: 100%;
-    height: auto;
+    overflow: auto;
+    max-width: 100%;
+    max-height:150px;
     margin: 0 auto;
     margin-bottom: 80px;
 }
@@ -11,7 +12,6 @@
 .fpPanel { 
     border-collapse:collapse;
     width: 50%;
-    /*height: 30px;*/
     margin: 0 auto;
 }
 
@@ -19,8 +19,9 @@
 .fpPanel th {
   position: relative;
   padding: 10px; 
-  height: 110px;
+  height: 120px;
 }
+
 
 .fpPanel th span {
   transform-origin: 0 50%;
@@ -41,7 +42,8 @@
     height:20px;
     border:1px solid #ccc;
     text-align:center;
-    font-family:sans-serif; font-size:13px;
+    font-family:sans-serif; 
+    font-size:13px;
 }
 .fpPanel td.include {
     background-color:#28881e;
@@ -57,4 +59,60 @@
     background-color: white;
 }
 
+.fpPanel td.hover {
+  background-color:purple;
+}
+
+/* Scrolldown selection menu*/
+
+.fpScrolldown { 
+    border-collapse:collapse;
+    width: 50%;
+    margin: 0 auto;
+}
+.fpScrolldown th {
+  position: relative;
+  padding: 10px; 
+  height: 10px;
+}
+
+.fpScrolldown th span {
+  transform-origin: 0 50%;
+  transform: rotate(-45deg); 
+  white-space: nowrap; 
+  display: block;
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  font-weight: normal;
+  font-size:12px;
+}
+
+
+.fpScrolldown td {
+    cursor:pointer;
+    width:20px; 
+    height:20px;
+    border:1px solid #ccc;
+    text-align:center;
+    font-family:sans-serif; 
+    font-size:13px;
+}
+.fpScrolldown td.include {
+    background-color:#28881e;
+    font-weight:bold; 
+    color:white;
+}
+.fpScrolldown td.exclude {
+    background-color:#863333;
+    font-weight:bold; 
+    color:#696969;
+}
+.fpScrolldown td.ignore {
+    background-color: white;
+}
+
+.fpScrolldown td.hover {
+  background-color:purple;
+}
 
