--- a/docs/css/fingerprintpanel.css
+++ b/docs/css/fingerprintpanel.css
@@ -88,23 +88,31 @@
   font-size:12px;
 }
 
+.fpScrolldown tbody tr:hover {
+  border: 2px solid #441111;
+}
+
 
 .fpScrolldown td {
+    margin:3px;
+    border-radius:15px;
     cursor:pointer;
     width:20px; 
     height:20px;
-    border:1px solid #ccc;
+    /*border:1px solid #ccc;*/
     text-align:center;
     font-family:sans-serif; 
     font-size:13px;
 }
 .fpScrolldown td.include {
-    background-color:#28881e;
+    /*background-color:#28881e;*/
+    background-color: #acacac;
     font-weight:bold; 
     color:white;
 }
 .fpScrolldown td.exclude {
-    background-color:#863333;
+    /*background-color:#863333;*/
+    background-color: white;
     font-weight:bold; 
     color:#696969;
 }
