--- a/docs/demos/demo.css
+++ b/docs/demos/demo.css
@@ -1,11 +1,25 @@
 @import url('https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic');
 @import url('https://fonts.googleapis.com/css?family=Cambay');
-@import url('https://fonts.googleapis.com/css?family=Katibeh');
+@import url('https://fonts.googleapis.com/css?family=Katibeh:100,400,700,100italic,400italic');
 
 * {
     font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
+.logo {
+    /*font-family: 'Cambay', sans-serif;*/
+    font-family: 'Katibeh', cursive;
+
+    position: fixed;
+    top: 10px;
+    left: 10px;
+
+    text-decoration: none;
+    font-size: 3em;
+    font-weight: 100;
+    font-style: italic;
+    color: #c3c3c3;
+}
 
 h1,h2,h3,h4,h5,h6 {
     text-align: center;
@@ -36,17 +50,3 @@ h1,h2,h3,h4,h5,h6 {
     right: 10px;
 }
 
-.logo {
-    /*font-family: 'Cambay', sans-serif;*/
-    font-family: 'Katibeh', cursive;
-
-    position: fixed;
-    top: 10px;
-    left: 10px;
-
-    text-decoration: none;
-    font-size: 3em;
-    font-weight: 500;
-    font-style: italic;
-    color: #c3c3c3;
-}
