Decoupled fingerprint column labels and scrollable panel

--- a/docs/css/flareplot-fingerprintpanel.css
+++ b/docs/css/flareplot-fingerprintpanel.css
@@ -2,10 +2,24 @@
 
 .fpPanelOuter {
     overflow: auto;
+    overflow-y:hidden;
     max-width: 100%;
-    max-height:150px;
+    max-height:250px;
     margin: 0 auto;
     margin-bottom: 80px;
+}
+
+.fpTitleContainer {
+    max-width: 100%;
+    height:auto;
+    margin: 0 auto;
+}
+
+.fpScrolldownContainer {
+    display:inline-block;
+    overflow: auto;
+    overflow-x: hidden;
+    max-height:150px;
 }
 
 
@@ -37,46 +51,48 @@
 
 
 .fpPanel td {
-    cursor:pointer;
-    width:20px; 
-    height:20px;
-    border:1px solid #ccc;
-    text-align:center;
-    font-family:sans-serif; 
-    font-size:13px;
+  cursor:pointer;
+  width:20px; 
+  height:20px;
+  border:1px solid #ccc;
+  text-align:center;
+  font-family:sans-serif; 
+  font-size:13px;
 }
 .fpPanel td.include {
-    background-color:#28881e;
-    font-weight:bold; 
-    color:white;
+  background-color:#28881e;
+  font-weight:bold; 
+  color:white;
 }
 .fpPanel td.exclude {
-    background-color:#863333;
-    font-weight:bold; 
-    color:#696969;
+  background-color:#863333;
+  font-weight:bold; 
+  color:#696969;
 }
 .fpPanel td.ignore {
-    background-color: white;
+  background-color: white;
 }
 
 .fpPanel td.hover {
   background-color:purple;
 }
 
-/* Scrolldown selection menu*/
 
-.fpScrolldown { 
-    border-collapse:collapse;
-    width: 50%;
-    margin: 0 auto;
+/* Title panel */
+
+.fpTitle {
+  border-collapse:collapse;
+  width: 50%;
+  margin: 0 auto;
 }
-.fpScrolldown th {
+
+.fpTitle th {
   position: relative;
   padding: 10px; 
   height: 10px;
 }
 
-.fpScrolldown th span {
+.fpTitle th span {
   transform-origin: 0 50%;
   transform: rotate(-45deg); 
   white-space: nowrap; 
@@ -88,18 +104,30 @@
   font-size:12px;
 }
 
-.fpScrolldown tbody tr:hover {
+/* Scrolldown selection menu*/
+
+.fpScrolldown { 
+    /*overflow-x: scroll;*/
+    border-collapse:collapse;
+    width: 50%;
+    margin: 0 auto;
+}
+
+
+.fpScrolldown tr:hover {
   border: 2px solid #441111;
 }
 
 
 .fpScrolldown td {
+    position: relative;
+    padding: 10px;
+    height: 10px;
     margin:3px;
     border-radius:15px;
     cursor:pointer;
     width:20px; 
     height:20px;
-    /*border:1px solid #ccc;*/
     text-align:center;
     font-family:sans-serif; 
     font-size:13px;
