--- a/docs/css/flareplot-fingerprintpanel.css
+++ b/docs/css/flareplot-fingerprintpanel.css
@@ -119,7 +119,7 @@
 
 
 .fpScrolldown td {
-    position: relative;
+    /*position: relative;
     padding: 10px;
     height: 10px;
     margin:3px;
@@ -129,8 +129,18 @@
     height:20px;
     text-align:center;
     font-family:sans-serif; 
-    font-size:13px;
+    font-size:13px;*/
+  cursor:pointer;
+  width:20px; 
+  height:20px;
+  border:1px solid #ccc;
+  text-align:center;
+  font-family:sans-serif; 
+  font-size:13px;
 }
+
+
+
 .fpScrolldown td.include {
     background-color: #acacac;
 }
