--- a/docs/css/flareplot-fingerprintpanel.css
+++ b/docs/css/flareplot-fingerprintpanel.css
@@ -43,15 +43,20 @@
   text-align:center;
   font-family:sans-serif; 
   font-size:13px;
+  color:white;
+
 }
 .fpPanel td.include {
-  background-color:#28881e;
+  background-color:white;
+  color:black;
 }
 .fpPanel td.exclude {
-  background-color:#863333;
+  background-color:white;
+  color:black;
 }
 .fpPanel td.ignore {
   background-color: white;
+  color:white;
 }
 
 .fpPanel td.hover {
