Fingerprintpanel centers properly. Compressed the demo vertically so it fits on front page

--- a/docs/demos/demo.css
+++ b/docs/demos/demo.css
@@ -7,6 +7,10 @@
     font-family: "Lato";
 }
 
+body {
+    margin: 0px;
+}
+
 .logo {
     /*font-family: 'Cambay', sans-serif;*/
     /*font-family: 'Playfair Display', serif;*/
