--- a/docs/css/flareplot-fingerprintpanel.css
+++ b/docs/css/flareplot-fingerprintpanel.css
@@ -1,10 +1,10 @@
 /* Outer fingerprint panel frame*/
 
 .fpPanelOuter {
-  max-width: 50%;
-  max-height:150px;
+  /*max-width: 50%;*/
+  /*max-height:150px;*/
   margin: 0 auto;
-  margin-bottom: 80px;
+  /*margin-bottom: 80px;*/
 }
 
 /*Fingerprint selection query menu*/
@@ -12,6 +12,7 @@
   border-collapse:collapse;
   width: 50%;
   margin: 0 auto;
+  box-sizing: border-box;
 }
 
 
@@ -24,7 +25,7 @@
 
 .fpPanel th span {
   transform-origin: 0 50%;
-  transform: rotate(-45deg); 
+  transform: rotate(-40deg);
   white-space: nowrap; 
   display: block;
   position: absolute;
@@ -77,7 +78,7 @@
 
 .fpScrolldown tbody{
   overflow:auto;
-  height:100px;
+  height:69px;
 }
 
 
