The defaults section can now specify default edge opacity

--- a/docs/css/flareplot-main.css
+++ b/docs/css/flareplot-main.css
@@ -38,16 +38,12 @@ path.arc {
     font-weight: bold;
 }
 
-.link.source {
-    stroke: #2ca02c;
-}
-
 .node.source {
     font-weight: bold;
 }
 
-.link.target {
-    stroke: #2ca02c;
+.link.target, .link.source {
+    opacity: 1;
 }
 
 .link.toggled{
